# microresolve

./: .env.example  .gitignore  ASV_LAUNCH_PLAN.md  AUTO_LEARN_OPTIMIZATION.md  BENCHMARKS.md  BENCHMARK_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN_NOTES.md  ENTITY_LAYER_PLAN.md  EXPERIMENT_PLAN.md  FINDINGS.md  GREATER_PLAN.md  IMPLEMENTATION_PLAN.md  IMPORT_TODO.md  INTENT_LAYER_PLAN.md  INTENT_PROGRAMMING.md  LAUNCH_PLAN.md  LAUNCH_STRATEGY.md  LAUNCH_USECASES.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MULTI_DOMAIN_TEST_RESULTS.md  PRE_LAUNCH_REVIEW.md  README.md  RELIABILITY_TESTS.md  RESEARCH_DIRECTIONS.md  RESEARCH_FINDINGS.md  RESEARCH_FINDINGS_V2.md  ROADMAP.md  SECURITY.md  SEMANTIC_LAYER_RESEARCH.md  SITUATION_EXPERIMENT.md  STRATEGY.md  STUDIO_IMPL.md  TODO.md  UI_REVIEW.md  (+7 more)
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  seed_pack.yml
.github/workflows/: ci.yml  docs.yml  release.yml
_internal/: V0_2_1_NAMING_AUDIT.md
benches/: resolve.rs
benchmarks/: .gitignore  README.md  ablation_eu_ai_act.py  agent_tools_bench.py  debug_oos.py  debug_oos2.py  delta_sync_bandwidth.py  download.py  eu_ai_act_eval.py  intent_classification.py  latency.py  lib.py  policy_override_attribution.py  prepare_track1.py  real_test_emotion_language.py  seeds_vs_policy_overrides.py  semantic_router_comparison.py  smoke_test_alpha_packs.py  test_e_edge_cases.py  test_e_grounded_l1.py  test_lexical_groups.py  tool_routing.py  trace_policy_queries.py
benchmarks/compliance_feasibility/: baseline.csv  benign.csv  benign.json  report.md  robustness.csv  robustness.json  run.py  seeds.json  seeds.py  sweep.py  tests.json  tests.py
benchmarks/datasets/: mcp_notion_stripe_test.json  mcp_routing_seeds.json  mcp_routing_test.json  mixatis_seeds.json  mixatis_test.json  mixsnips_seeds.json  mixsnips_test.json  multilingual_seeds.json  multilingual_test.json  saas_support_seeds.json  saas_support_test.json
benchmarks/safety_eval/: eval_learning_convergence.py  eval_safety_pack.py  eval_tools_hard_benigns.py
benchmarks/scripts/: bench_learning_curve.py  bench_mcp_routing.py  bench_mixsnips_autolearn.py  bench_multilingual.py  bench_saas_support.py  lib.py
blogs/: PATTERNS.md  entity-layer-poc.md  jailbreak-detection.md  launch-post.md  mcp-tool-routing.md  microsecond-latency-investigation.md
data/: .gitignore  download.sh
docs/: ARCHITECTURE.md  BLOG_IDEAS.md  DASHBOARD_PLAN.md  FEATURES_ROADMAP.md  LANGUAGES.md  LANGUAGE_AS_PROGRAM.md  MARKET_RESEARCH_2026.md  MULTI_INTENT.md  MULTI_INTENT_ORDER.md  PAINPOINTS_2026.md  SEED_GUARD_PLAN.md  SIMULATION.md  USE_CASES.md
docs-site/: astro.config.mjs  package-lock.json  package.json
docs/blog/: FAILURE_LOG.md
docs/research/: ASV_ROUTING_FINDINGS.md  BENCHMARKS.md  NOVELTY_ASSESSMENT.md  PLAN.md  PRODUCT_STRATEGY.md  RESULTS.md  SEED_GUARD_PAPER.md  VISION.md  WEAKNESSES.md  clean_experiment_results.md  experiment_results.md  mesh_experiment_results.md  scenario_baseline_report.txt
examples/: connected.rs  hybrid_subscribe.rs  node_express.js  openapi_import.py  python_fastapi.py  rust_basic.rs
examples/curl/: README.md  basic.sh  multi_app.sh
examples/node/: README.md  basic.js  express_server.js  launch_demo.js  package.json  studio_connect_agent_router.js
examples/python/: README.md  basic.py  fastapi_server.py  hybrid_llm.py  launch_demo.py  openapi_import.py  requirements.txt  simulate_abcd.py  simulate_sessions.py
examples/rust/: README.md
experiments/: FINDINGS.md  emergence_queries.sh
languages/: languages.json  stopwords.json
node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
node/examples/: basic.js  connected.js  reflex_toggles.js
node/npm/darwin-arm64/: README.md  package.json
node/npm/darwin-x64/: README.md  package.json
node/npm/linux-arm64-gnu/: README.md  package.json
node/npm/linux-x64-gnu/: README.md  package.json
node/npm/linux-x64-musl/: README.md  package.json
node/npm/win32-x64-msvc/: README.md  package.json
node/src/: lib.rs
packs/content-moderation-generic/: _ns.json  clean_content.json  harassment.json  hate_speech.json  misinformation.json  self_promotion.json  sexual_content.json  spam.json  violence_threat.json
packs/csam-ncmec/: _ns.json  csam_generation_request.json  legitimate_child_safety.json  minor_solicitation.json  minor_trafficking.json
packs/dsr-triage/: _ns.json  access_request.json  erasure_request.json  (+7 more)
patterns/: builtin.json
python/: Cargo.toml  README.md  pyproject.toml
python/examples/: agent_router_client.py  basic.py  connected.py  reflex_toggles.py
python/src/: lib.rs
scripts/: e2e-mcp-autolearn.py  generate_l1_base.py  run-tests.sh  seed_layers_demo.py  split_server.py
src/: concept.rs  discovery.rs  engine.rs  entity.rs  execute.rs  hebbian.rs  index.rs  lexical.rs  lib.rs  multi.rs  ngram.rs  oplog.rs  phrase.rs  resolver_core.rs  resolver_intents.rs  resolver_learning.rs  resolver_metadata.rs  resolver_persist.rs  router_analytics.rs  router_core.rs  router_intents.rs  router_learning.rs  router_metadata.rs  router_paraphrase.rs  router_persist.rs  router_routing.rs  router_similarity.rs  router_situation.rs  scoring.rs  seed.rs  semantic.rs  tokenizer.rs  types.rs  vector.rs  wasm.rs
tests/: baseline_test.py  cjk_guard_test.rs  cross_app_learn_test.py  delta_sync_e2e.rs  delta_sync_e2e_connected.rs  delta_sync_idempotency.rs  delta_sync_oplog.rs  http_full_e2e.rs  http_smoke.rs  integration.rs  multi_app_test.py  multi_intent_benchmark.rs  natural_multi_intent.rs  resolve_determinism.rs  router_tests.rs  scenario_regression.rs  seed_guard_simulation.py  simulate_eval.py  snapshot_endpoint.rs  strict_connect_mode.rs  stripe_simulation.rs  training_arena_test.sh  training_test2.sh  unified_app_test.py  unified_index_test.rs
ui/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
web/: .gitignore  build.sh  config.example.js  index.html
(+370 files in other folders)
