[package]
name = "microresolve"
version = "0.1.0"
edition = "2021"
authors = ["Gladius Thayalarajan"]
description = "Pre-LLM decision layer: intent routing, PII detection, safety filtering, tool prefiltering. ~30μs per call, CPU-only, continuous learning."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gladius/microresolve"
homepage = "https://github.com/gladius/microresolve"
documentation = "https://docs.rs/microresolve"
readme = "README.md"
keywords = ["intent", "routing", "nlp", "chatbot", "sparse-vectors"]
categories = ["text-processing", "algorithms"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aho-corasick = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
thiserror = "1"
url = "2"
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
tower-http = { version = "0.6", features = ["cors", "fs"], optional = true }
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
toml = { version = "0.8", optional = true }
directories = { version = "6", optional = true }
open = { version = "5", optional = true }


[features]
default = []
connect = ["reqwest"]
server = ["axum", "tokio", "tokio-stream", "tower-http", "reqwest", "connect", "clap", "toml", "directories", "open"]

[[bin]]
name = "server"
path = "src/bin/server/main.rs"
required-features = ["server"]

[dev-dependencies]
