[package]
name = "microresolve-node"
version = "0.2.0"
edition = "2021"
authors = ["Gladius Thayalarajan"]
description = "System 1 relay for LLM apps — sub-millisecond intent classification, safety gating, tool selection. CPU-only, continuous learning from corrections."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gladius/microresolve"
homepage = "https://github.com/gladius/microresolve"
publish = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi8"] }
napi-derive = "3"
microresolve-core = { package = "microresolve", path = "..", features = ["connect"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"
