[package]
name = "microresolve-python"
version = "0.1.0"
edition = "2021"
authors = ["Gladius Thayalarajan"]
description = "Pre-LLM decision layer: intent routing, PII detection, safety filtering, tool prefiltering. ~30μs per call, CPU-only, continuous learning."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gladius/microresolve"
homepage = "https://github.com/gladius/microresolve"
publish = true

[lib]
name = "microresolve_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
microresolve-core = { package = "microresolve", path = ".." }
