[package]
name = "microresolve-python"
version = "0.2.1"
edition = "2021"
authors = ["Gladius Thayalarajan"]
description = "System 1 relay for LLM apps — sub-millisecond intent classification, safety gating, tool selection. CPU-only, continuous learning from corrections."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gladius/microresolve"
homepage = "https://github.com/gladius/microresolve"
publish = true

[lib]
name = "microresolve_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py38"] }
microresolve-core = { package = "microresolve", path = "..", features = ["connect"] }
serde_json = "1"
